--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "tetric-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": ".",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
